# marginfi-v2

./: .gitignore  AGENTS.md  Anchor.toml  CLAUDE.md  Cargo.toml  PR_SUMMARY.md  README.md  SECURITY.md  package.json  patch-notes-0.1.9.md
.github/actions/base-setup/: action.yaml
.github/actions/build-program/: action.yaml
.github/actions/build-verifiable-program/: action.yaml
.github/actions/build-workspace/: action.yaml
.github/actions/deploy-buffers/: action.yaml
.github/actions/install-solana/: action.yaml
.github/actions/setup-anchor-cli/: action.yaml
.github/actions/setup-common/: action.yaml
.github/actions/setup-solana-cli/: action.yaml
.github/workflows/: release-cli.yaml  release-program.yaml  test.yaml  trident-fuzz.yaml
clients/rust/marginfi-cli/: ARCHITECTURE.md  Cargo.toml  README.md
fixtures-shim/: Cargo.toml
fixtures-shim/src/: lib.rs
guides/ADMIN/: DEPLOY_GUIDE.md  DEPLOY_GUIDE_STAGING.md  PERMISSIONS_AND_ROLES.md
guides/DEVELOPERS_INTEGRATORS/: GETTING_STARTED_DEV.md  GETTING_STARTED_INTEGRATOR.md  JUPLEND_INTEGRATION.md  KAMINO_INTEGRATION.md  PACKING_RISK_ACCOUNTS.md
guides/RISK_AND_LIQUIDATORS/: BANKRUPTCY.md  CLASSIC_LIQUIDATION.md  RECEIVERSHIP_LIQUIDATION.md  RISK_PARAMETERS.md
idls/: drift.json  juplend_earn.json  kamino_farms.json  kamino_lending.json  kamino_lending_complete.json
idls-complete/: k_farms_idl_03272026.json  k_lend_idl_03272026.json
p0-cli/: AGENTS.md  Cargo.toml  README.md
p0-cli/src/: config.rs  configs.rs  output.rs  profile.rs  utils.rs
p0-cli/src/commands/: account.rs  bank.rs  drift.rs  kamino.rs  profile.rs
p0-cli/src/processor/: account.rs  admin.rs  bank_ops.rs  fee.rs  group_ops.rs  integrations.rs  oracle.rs  profile_ops.rs
patch-note-drafts/: README_PATCH_NOTE_FORMAT.MD  patch-notes-0.1.9.md
programs/drift-mocks/: Cargo.toml
programs/drift-mocks/src/: lib.rs  macros.rs  state.rs
programs/exponent-mocks/: Cargo.toml
programs/exponent-mocks/src/: lib.rs  state.rs
programs/juplend-mocks/: Cargo.toml
programs/juplend-mocks/src/: lib.rs  state.rs
programs/kamino-mocks/: Cargo.toml
programs/kamino-mocks/src/: lib.rs  macros.rs  state.rs
programs/marginfi/: Cargo.toml  build.rs
programs/marginfi/fuzz/: Cargo.toml  README.md  generate_corpus.py
programs/marginfi/src/: constants.rs  errors.rs  events.rs  ix_utils.rs  lib.rs  oracle_compat.rs
programs/marinade-mocks/: Cargo.toml
programs/marinade-mocks/src/: lib.rs  state.rs
programs/mocks/: Cargo.toml
programs/mocks/src/: lib.rs
programs/solend-mocks/: Cargo.toml
programs/solend-mocks/src/: cpi.rs  lib.rs  macros.rs  state.rs
programs/test_transfer_hook/: Cargo.toml
programs/test_transfer_hook/src/: lib.rs
scripts/: README.MD  build-idl.sh  build-program-verifiable.sh  build-program.sh  build-workspace.sh  distill_drift_juplend_macro_idl.py  distill_kamino_idls.sh  run-kamino-scenarios.sh  single-test.sh  test-program-remix.sh  test-program.sh  update_idls.sh
test-utils/: Cargo.toml
test-utils/src/: bank.rs  kamino.rs  lib.rs  marginfi_account.rs  marginfi_group.rs  prelude.rs  rebalance.rs  spl.rs  test.rs  utils.rs
tests/: 01_initGroup.spec.ts  02_configGroup.spec.ts  02a_groupResize.spec.ts  03_addBank.spec.ts  04_configureBank.spec.ts  05_circuit_breaker.spec.ts  05_setupEmissions.spec.ts  06_initUser.spec.ts  07_deposit.spec.ts  08_borrow.spec.ts  09_withdraw_repay.spec.ts  10_liquidate.spec.ts  12_transfer_account.spec.ts  12a_transfer_account_pda.spec.ts  13_closebank.spec.ts  14_reduceOnlyBanks.spec.ts  15_accountFreeze.spec.ts  16_orders.spec.ts  16_rateLimiter.spec.ts  17_rateLimiter.spec.ts  18_emissionsDeposit.spec.ts  19_closeAccount.spec.ts  2x_circuit_breaker.spec.ts  d05_driftMrgnUser.spec.ts  d06_driftBankInit.spec.ts  d07_driftDeposit.spec.ts  d08_driftWithdraw.spec.ts  d09_driftLiquidate.spec.ts  d10_driftInterestSimulation.spec.ts  d11_poolIdMarkets.spec.ts  d12_driftHarvestReward.spec.ts  d13_oraclePriceConversionTest.spec.ts  d14_driftRecLiquidation.spec.ts  d15_driftRecLiquidation.spec.ts  d15_fixedPrice.spec.ts  d16_sameAssetEmode.spec.ts  d16_unifiedIntegration.spec.ts  e03_emodeBorrow.spec.ts  e04_emodeLiquidation.spec.ts  e05_panicMode.spec.ts  (+91 more)
tests/bench/: emodeReconcile.bench.ts
tests/fixtures/: bsol_stake_pool.json  exponent_pt_vault.json  jupsol_stake_pool.json  kamino_lending.json  kamino_lending.ts  marinade_msol_state.json  sanctum_spl_stake_pool.json
tests/jup_old/: jl01_juplend_basic.spec.ts  jl02_juplend_interest.spec.ts  jl05_juplend_deposit_withdraw_matrix.spec.ts  jl08_juplend_activation_gate.spec.ts  jl10_juplend_exact_math.spec.ts
tests/specs/bankruptcy/: z01_compoundInterest.spec.ts  z02_lastOraclePrice.spec.ts  z05_orderPositionExtremes.spec.ts  zb01_bankruptcy.spec.ts  zb02_e2eSunset.spec.ts
tests/specs/basic/: 01_initGroup.spec.ts  02_configGroup.spec.ts  02a_groupResize.spec.ts  03_addBank.spec.ts  04_configureBank.spec.ts  06_initUser.spec.ts  (+18 more)
tests/utils/: bankrun-oracles.ts  bankrunConnection.ts  bn-utils.ts  drift-instructions.ts  drift-liq-helpers.ts  drift-sdk.ts  drift-utils.ts  genericTests.ts  group-instructions.ts  i80f48.ts  integration-account-layouts.ts  integration-instructions.ts  kamino-instructions.ts  kamino-reserve-setup.ts  kamino-utils.ts  litesvm.ts  mocks.ts  multi-limits-juplend-setup.ts  multi-limits-setup.ts  pdas.ts  premium-instructions.ts  pyth-pull-mocks.ts  same-asset-emode.ts  solend-instructions.ts  solend-utils.ts  spl-staking-utils.ts  stake-utils.ts  tools.ts  types.ts  user-instructions.ts
trident-tests/: Cargo.toml  Makefile  README.md  Trident.toml
trident-tests/fuzz_0/: README.md  bank.rs  constants.rs  fuzz_accounts.rs  oracle_patch.rs  test_fuzz.rs  types.rs  user.rs  utils.rs
trident-tests/fuzz_1/: README.md  bank.rs  constants.rs  core_methods.rs  fuzz_accounts.rs  init_methods.rs  invariants.rs  juplend_methods.rs  kamino_fork.rs  kamino_methods.rs  kamino_utils.rs  oracle_patch.rs  test_fuzz.rs  types.rs  utils.rs
type-crate/: Cargo.toml
type-crate/src/: constants.rs  pdas.rs
(+373 files in other folders)
