[workspace]
resolver = "2"
members = [
    "programs/marginfi",
    "programs/mocks",
    "programs/test_transfer_hook",
    "type-crate",
    "id-crate",
    "p0-cli"
]
exclude = [
  "shamir-split",
]

[workspace.dependencies]
solana-cli-output = "=3.1.11"
solana-client = "=3.1.11"
solana-sdk = "=3.0.0"
solana-logger = "=3.0.0"
solana-program = "=3.0.0"
solana-program-test = "=3.1.11"
solana-account-decoder = "=3.1.11"
solana-instruction = "=3.4.0"
solana-sha256-hasher = "3.1.0"
solana-stake-interface = "3.1.0"
solana-vote-interface = "3.0.0"
solana-borsh = "3.0.2"

# solana-measure = "=3.1.0"
# solana-metrics = "=3.1.0"
# solana-transaction-status = "=3.1.0"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
# spl-discriminator = "0.2.2"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }

anchor-lang = { version = "0.32.1" }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
anchor-client = { version = "0.32.1" }

fixtures = { path = "test-utils", package = "test-utilities" }
marginfi = { path = "programs/marginfi", package = "marginfi" }
transfer_hook = { path = "programs/test_transfer_hook", package = "test_transfer_hook" }
mocks = { path = "programs/mocks", package = "mocks" }
id-crate = { path = "id-crate" }
marginfi-type-crate = { path = "type-crate" }

pyth-solana-receiver-sdk = "1.1.0"
# pythnet-sdk = "2.3.1"
switchboard-on-demand = "0.7.4"

borsh = "1.5.7"
bytemuck = "1.22.0"
bs58 = "0.5.1"
# Note: 1.29.0 and later require Rust 1.83+ which solana does not ship with (yet)
fixed = "=1.28.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
static_assertions = "1.1.0"

[profile.dev]
overflow-checks = false
lto = "off"
codegen-units = 8
incremental = false

## Build options for release (build-program-verifiable should use these through env settings)
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

## Notes for usable lockfile generation in Solana land
# OUTDATED Patch a version of half compatabile with fixed and Rust <=1.79:
# cargo update -p half --precise 2.4.1
# 
# OUTDATED Patch zerofrom and litemap:
# cargo update -p zerofrom --precise 0.1.5
# cargo update -p litemap --precise 0.7.4

## To fix the Anchor idl generation bug:
# cargo update -p proc-macro2 --precise 1.0.95
