[workspace]
resolver = "2"
members = [
    "programs/marginfi",
    "programs/mocks",
    "programs/kamino-mocks",
    "programs/test_transfer_hook",
    "type-crate",
    "id-crate",
    "p0-cli"
]
exclude = [
  "shamir-split",
]

[workspace.dependencies]
solana-cli-output = { version = "=3.1.12", features = ["agave-unstable-api"] }
solana-client = "=3.1.12"
solana-sdk = "=3.0.0"
solana-logger = "=3.0.0"
solana-program = "=3.0.0"
solana-program-test = { version = "=3.1.12", features = ["agave-unstable-api"] }
solana-account-decoder = { version = "=3.1.12", features = ["agave-unstable-api"] }
solana-instruction = "=3.4.0"
solana-address-lookup-table-interface = { version = "3.1.0", features = ["bincode", "bytemuck"] }
solana-commitment-config = "3.1.1"
solana-compute-budget-interface = "3.0.0"
solana-program-pack = "3.1.0"
solana-sha256-hasher = "3.1.0"
solana-stake-interface = "3.1.0"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
solana-system-transaction = "3.0.0"
solana-vote-interface = "3.0.0"
solana-borsh = "3.0.2"
solana-address = "2.6.0"
solana-instructions-sysvar = "3.0.0"
solana-msg = "3.1.0"

spl-token = "9.0.0"
spl-associated-token-account = { version = "8.0.0", default-features = false, features = ["no-entrypoint"] }
spl-transfer-hook-interface = "2.1.0"
spl-tlv-account-resolution = "0.11.1"
spl-pod = "0.7.3"
spl-token-2022 = { version = "11.0.0", features = ["no-entrypoint"] }

anchor-lang = { version = "1.0.2" }
anchor-spl = { version = "1.0.2", default-features = false, features = ["associated_token", "token", "token_2022"] }
anchor-client = { version = "1.0.2" }

fixtures = { path = "test-utils", package = "test-utilities" }
marginfi = { path = "programs/marginfi", package = "marginfi" }
transfer_hook = { path = "programs/test_transfer_hook", package = "test_transfer_hook" }
mocks = { path = "programs/mocks", package = "mocks" }
id-crate = { path = "id-crate" }
marginfi-type-crate = { path = "type-crate" }

pyth-solana-receiver-sdk = { git = "https://github.com/0dotxyz/pyth-crosschain", package = "pyth-solana-receiver-sdk", rev = "0f170d205e47a6ea34ad30c424d9ec8cc61a1f1fc" }
switchboard-on-demand = { git = "https://github.com/switchboard-xyz/switchboard-sdk", rev = "f75b1ef63e10eda35d046b1838810ec2935d7f39", default-features = false, features = ["cpi", "solana-v3"] }

borsh = "1.6.1"
bytemuck = "1.22.0"
bs58 = "0.5.1"
fixed = "=1.28.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
static_assertions = "1.1.0"

[profile.dev]
overflow-checks = false
lto = "off"
codegen-units = 8
incremental = false

## Build options for release (build-program-verifiable should use these through env settings)
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

## To fix the Anchor idl generation bug:
# cargo update -p proc-macro2 --precise 1.0.95
